--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
       <nav id="navbar">
         <div id="logo">
-          <h1>KEEP NOTING</h1>
+          <h1>Blueberry KEEP</h1>
         </div>
       </nav>
     </header>
