message for empty input in add note

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         /> -->
         <input type="text" id="note" placeholder="Enter your note" value="" />
       </div>
+      <div class="noInputText" id="noInputText">Can not have an Empty Note...</div>
       <div class="buttons">
         <button id="add" >Add note</button>
       </div>
