edit and dark mode theme button added

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <div id="logo">
           <h1>Blueberry KEEP📝</h1>
         </div>
+        <button id="toggleDarkModeBtn" onclick="toggleDarkMode()">Dark mode</button>
       </nav>
     </header>
     <div id="container">
