--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
       </nav>
     </header>
-    <div id="container">
+    <form id="container">
       <div id="notebox">
         <!-- <input
           type="text"
@@ -37,7 +37,7 @@
       <div class="buttons">
         <button id="add" >Add note</button>
       </div>
-    </div>
+    </form>
 <div id="mainbox">
 
   </div>
