--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
     <title>Todo List using Javascript</title>
   </head>
-  <body onload="showNotes()">
+  <body onload="showNotes()" class="light-mode">
     <header>
       <nav id="navbar">
         <div id="logo">
