welcome message added

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <title>Todo List using Javascript</title>
   </head>
   <body onload="showNotes()" class="light-mode">
+
     <header>
       <nav id="navbar">
         <div id="logo">
@@ -23,6 +24,13 @@
         <button id="toggleDarkModeBtn" onclick="toggleDarkMode()">Dark mode</button>
       </nav>
     </header>
+   
+    <!-- Welcome Section -->
+    <section class="welcome-message">
+      <h2>Welcome Folks!</h2>
+
+
+    </section>
     <form id="container">
       <div id="notebox">
         <!-- <input
