Updated UI with required changes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         <div id="logo">
           <h1>Blueberry KEEP📝</h1>
         </div>
-        <button id="toggleDarkModeBtn" onclick="toggleDarkMode()">Dark mode</button>
+        <!-- <button id="toggleDarkModeBtn" onclick="toggleDarkMode()">Dark mode</button> -->
+        <button	class="light-mode-button"	aria-label="Toggle Light Mode"	onclick="toggle_light_mode()"><span></span><span></span></button>
       </nav>
     </header>
    
@@ -45,4 +46,16 @@
   </div>
   </body>
   <script src="index.js"></script>
+  <script>
+    function toggle_light_mode() {
+        var app = document.getElementsByTagName("BODY")[0];
+        if (localStorage.lightMode == "dark") {
+      localStorage.lightMode = "light";
+      app.setAttribute("light-mode", "light");
+        } else {
+      localStorage.lightMode = "dark";
+      app.setAttribute("light-mode", "dark");
+        }		
+    }
+    </script>
 </html>
