added transitions and UI changes

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </section>
     <form id="container">
       <div id="notebox">
-        <input type="text" id="note" placeholder="Enter your note" value="" />
+        <input type="text" id="note" placeholder="Enter your Note" value="" />
       </div>
       <div class="noInputText" id="noInputText">Please write something for your note before adding it ...</div>
       <div class="buttons">
