Edit functionality improved

--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
       <div class="buttons">
         <button id="add" >Add note</button>
       </div>
+      <br><br>
+      <div>
+        <h2 class="note-edit-heading">Note Editing Guideline</h2>
+        <br>
+        <h3>-To edit a note firstly write the text you want to replace in the "Enter your note" section </h3>
+        <h3>-Then press the edit button of the respective note that you want to edit</h3>
+      </div>
     </form>
 <div id="mainbox">
 
