Bug Fixed + UI improvements

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </section>
     <form id="container">
       <div id="notebox">
-        <input type="text" id="note" placeholder="Enter your Note" value="" />
+        <input type="text" id="note" placeholder="Enter your Note" value="" class="" />
       </div>
       <div class="buttons">
         <button id="add" >Add note</button>
