added red theme for notes

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>Todo List using Javascript</title>
+    <title>Todo List</title>
   </head>
   <body onload="showNotes()" class="light-mode">
     <div id="msgbox" class="msg">message</div>
     <header>
       <nav id="navbar">
         <div id="logo">
-          <h1>Blueberry KEEP📝</h1>
+          <h1>Blueberry KEEP NOTES📝</h1>
         </div>
         <!-- <button id="toggleDarkModeBtn" onclick="toggleDarkMode()">Dark mode</button> -->
         <button	class="light-mode-button"	aria-label="Toggle Light Mode"	onclick="toggle_light_mode()"><span></span><span></span></button>
