I changed the welcome to TO DO LIST

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
    
     <!-- Welcome Section -->
     <section class="welcome-message">
-      <h2>Welcome Folks!</h2>
+      <h2>TO-DO LIST</h2>
 
 
     </section>
