--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
       <nav id="navbar">
         <div id="logo">
-          <h1>Blueberry KEEP📝</h1>
+          <h1><a href="index.html" id="a-link">Blueberry KEEP📝</a></h1>
         </div>
         <!-- <button id="toggleDarkModeBtn" onclick="toggleDarkMode()">Dark mode</button> -->
         <button	class="light-mode-button"	aria-label="Toggle Light Mode"	onclick="toggle_light_mode()"><span></span><span></span></button>
