--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <input type="text" id="notetit" placeholder="Title" value="" class="" />
       </div> -->
       <div id="notebox">
-        <input type="text" id="note" name =placeholder="Enter your Note" value="" class="" />
+        <input type="text" id="note" placeholder="Enter your Note" value="" class="" />
       </div>
       <div class="buttons">
         <button id="add" >Add note</button>
