--- a/index.html
+++ b/index.html
@@ -42,9 +42,17 @@
       </div>
       <br><br>
     </form>
-<div id="mainbox">
+    <div id="mainbox">
 
-  </div>
+    </div>
+    <footer>
+      <div class="waves">
+        <div class="wave" id="wave1"></div>
+        <div class="wave" id="wave2"></div>
+        <div class="wave" id="wave3"></div>
+        <div class="wave" id="wave4"></div>
+      </div>
+    </footer>
   </body>
   <script src="index.js"></script>
   <script>
