--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         <div id="logo">
           <h1><a href="index.html" id="a-link">Blueberry KEEP📝</a></h1>
         </div>
+        <div id="searchnote">
+            <input type="text" id="searching" placeholder="Search Note" value="" class="" />
+          </div>
         <!-- <button id="toggleDarkModeBtn" onclick="toggleDarkMode()">Dark mode</button> -->
         <button
           class="light-mode-button"
@@ -56,9 +59,15 @@
       </div>
       <br /><br />
     </form>
-    <div id="mainbox"></div>
+    <div id="mainbox">
+
+        
+    </div>
   </body>
-  <script src="index.js"></script>
+  <script src="index.js">
+
+
+  </script>
   <script>
     function toggle_light_mode(firstLoad) {
       var app = document.getElementsByTagName('BODY')[0];
