--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
     <!-- Welcome Section -->
     <section class="welcome-message">
       <h2>TO-DO LIST</h2>
+
+
     </section>
 
     <form id="container">
@@ -55,36 +57,32 @@
       <div class="buttons">
         <button id="add">Add note</button>
       </div>
-      <br /><br />
+      <br><br>
     </form>
     <div id="mainbox"></div>
   </body>
   <script src="index.js"></script>
   <script>
     function toggle_light_mode(firstLoad) {
-      var app = document.getElementsByTagName('BODY')[0];
-      const check = firstLoad
-        ? localStorage.lightMode != 'dark'
-        : localStorage.lightMode == 'dark';
-      if (check) {
-        localStorage.lightMode = 'light';
-        app.setAttribute('light-mode', 'light');
-        if (!firstLoad) showmsg('Light Mode Enabled.');
-      } else {
-        localStorage.lightMode = 'dark';
-        app.setAttribute('light-mode', 'dark');
-        if (!firstLoad) showmsg('Dark Mode Enabled.');
-      }
+        var app = document.getElementsByTagName("BODY")[0];
+        const check = firstLoad ? localStorage.lightMode != "dark" : localStorage.lightMode == "dark";
+        if (check) {
+          localStorage.lightMode = "light";
+          app.setAttribute("light-mode", "light");
+          if (!firstLoad) showmsg('Light Mode Enabled.')
+        } else {
+          localStorage.lightMode = "dark";
+          app.setAttribute("light-mode", "dark");
+          if (!firstLoad) showmsg('Dark Mode Enabled.')
+        }		
     }
 
-    var maggio = document.querySelector('#msgbox');
-    function showmsg(txt) {
-      document.getElementById('msgbox').innerText = '✉ ' + txt;
-      maggio.classList.add('show');
-      setTimeout(function () {
-        maggio.classList.remove('show');
-      }, 3000);
-    }
+    var maggio = document.querySelector("#msgbox");
+    function showmsg(txt){
+      document.getElementById('msgbox').innerText='✉ ' + txt;
+        maggio.classList.add('show');
+        setTimeout(function(){maggio.classList.remove('show')},3000);
+    };
     document.onreadystatechange = () => {
       if (document.readyState === 'complete') {
         console.log('Flipped!');
