--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
       <br><br>
     </form>
     <div id="mainbox"></div>
+    <div class="clock">
+      <p id="clock">date</p>
+    </div>
   </body>
   <script src="index.js"></script>
   <script>
