--- a/index.html
+++ b/index.html
@@ -59,15 +59,33 @@
       </div>
       <br /><br />
     </form>
-    <div id="mainbox">
+<div id="mainbox">
 
-        
-    </div>
+  </div>
+  <footer>
+    <section id="footer">
+      <span class="span">Created By <a href="https://github.com/Zack-Dx" target="_blank"
+        style="color: #a35ae8; text-decoration: none;"> Zack
+      </a>| <span class="far fa-copyright"></span> 2022 All rights reserved.</span>
+      <div class="social-icons">
+  <a class="social" id="linkedin" href="#" target="_blank">
+    <span class="icon"><i class="fab fa-linkedin"></i></span>
+  </a>
+  <a class="social" id="insta" href="#" target="_blank">
+    <span class="icon"><i class="fab fa-instagram"></i></span>
+  </a>
+  <a class="social" id="github" href="https://github.com/Zack-Dx" target="_blank">
+    <span class="icon"><i class="fab fa-github-square"></i></span>
+  </a>
+  <a class="social" id="twitter" href="#" target="_blank">
+    <span class="icon"><i class="fab fa-twitter-square"></i></span>
+  </a>
+</div>
+    </section>
+  </footer>
+
   </body>
-  <script src="index.js">
-
-
-  </script>
+  <script src="index.js"></script>
   <script>
     function toggle_light_mode(firstLoad) {
       var app = document.getElementsByTagName('BODY')[0];
