--- a/index.html
+++ b/index.html
@@ -59,9 +59,10 @@
     <div id="mainbox">
   </div>
   <footer>
+    
     <section id="footer">
       <span class="span">Created By <a href="https://github.com/Zack-Dx" target="_blank"
-        style="color: #a35ae8; text-decoration: none;"> Zack
+        style="color: #6d3c9b; text-decoration: none;"> Zack
       </a>| <span class="far fa-copyright"></span> 2022 All rights reserved.</span>
       <div class="social-icons">
   <a class="social" id="linkedin" href="#" target="_blank">
@@ -78,6 +79,12 @@
   </a>
 </div>
     </section>
+    <div class="waves">
+      <div class="wave" id="wave1"></div>
+      <div class="wave" id="wave2"></div>
+      <div class="wave" id="wave3"></div>
+      <div class="wave" id="wave4"></div>
+    </div>
   </footer>
   </body>
   <script src="index.js"></script>
