--- a/index.html
+++ b/index.html
@@ -61,23 +61,22 @@
   <footer>
     
     <section id="footer">
-      <span class="span">Created By <a href="https://github.com/Zack-Dx" target="_blank"
-        style="color: #6d3c9b; text-decoration: none;"> Zack
-      </a>| <span class="far fa-copyright"></span> 2022 All rights reserved.</span>
+      <span class="span">Created By <a href="https://github.com/Zack-Dx" target="_blank" style="color: #6d3c9b; text-decoration: none;"> Zack </a>| 
+      <span class="far fa-copyright"></span> 2022 All rights reserved.</span>
       <div class="social-icons">
-  <a class="social" id="linkedin" href="#" target="_blank">
-    <span class="icon"><i class="fab fa-linkedin"></i></span>
-  </a>
-  <a class="social" id="insta" href="#" target="_blank">
-    <span class="icon"><i class="fab fa-instagram"></i></span>
-  </a>
-  <a class="social" id="github" href="https://github.com/Zack-Dx" target="_blank">
-    <span class="icon"><i class="fab fa-github-square"></i></span>
-  </a>
-  <a class="social" id="twitter" href="#" target="_blank">
-    <span class="icon"><i class="fab fa-twitter-square"></i></span>
-  </a>
-</div>
+        <a class="social" id="linkedin" href="#" target="_blank">
+         <span class="icon"><i class="fab fa-linkedin"></i></span>
+        </a>
+        <a class="social" id="insta" href="#" target="_blank">
+          <span class="icon"><i class="fab fa-instagram"></i></span>
+        </a>
+        <a class="social" id="github" href="https://github.com/Zack-Dx" target="_blank">
+         <span class="icon"><i class="fab fa-github-square"></i></span>
+        </a>
+        <a class="social" id="twitter" href="#" target="_blank">
+          <span class="icon"><i class="fab fa-twitter-square"></i></span>
+        </a>
+      </div>
     </section>
     <div class="waves">
       <div class="wave" id="wave1"></div>
