Add Confirm Before Deleting notes

--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
   </footer>
 
 </body>
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+
 <script src="index.js"></script>
 <script>
   function toggle_light_mode(firstLoad) {
