creating a 'js' folder and moving the 'index.js' file there, correcting the path to the 'index.js' file

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     </div>
   </footer>
   </body>
-  <script src="index.js"></script>
+  <script src="js/index.js"></script>
   <script>
     function toggle_light_mode(firstLoad) {
       var app = document.getElementsByTagName('BODY')[0];
