--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
         <div id="searchnote">
             <input type="text" id="searching" placeholder="Search Note" value="" class="" />
           </div>
-        <!-- <button id="toggleDarkModeBtn" onclick="toggleDarkMode()">Dark mode</button> -->
-        <button 
+        <button
           class="light-mode-button"
           aria-label="Toggle Light Mode"
           onclick="toggle_light_mode()"
@@ -75,7 +74,7 @@
     
     <section id="footer">
       <span class="span">Created By <a href="https://github.com/Zack-Dx" target="_blank" style="color: #6d3c9b; text-decoration: none;"> Zack </a>| 
-      <span class="far fa-copyright"></span> 2022 All rights reserved.</span>
+      <span class="far fa-copyright" id="currentYear"></span>  All rights reserved.</span>
       <div class="social-icons">
         <a class="social" id="linkedin" href="#" target="_blank">
          <span class="icon"><i class="fab fa-linkedin"></i></span>
@@ -100,5 +99,45 @@
   </footer>
   </body>
   <script src="index.js"></script>
-  <script src="messages.js"></script>
+  <script>
+    function toggle_light_mode(firstLoad) {
+      var app = document.getElementsByTagName('BODY')[0];
+      const check = firstLoad
+        ? localStorage.lightMode != 'dark'
+        : localStorage.lightMode == 'dark';
+      if (check) {
+        localStorage.lightMode = 'light';
+        app.setAttribute('light-mode', 'light');
+        app.setAttribute('button_color', 'dark');
+        if (!firstLoad) showmsg('Light Mode Enabled.');
+      } else {
+        localStorage.lightMode = 'dark';
+        app.setAttribute('light-mode', 'dark');
+        app.setAttribute('button_color', 'light');
+        if (!firstLoad) showmsg('Dark Mode Enabled.');
+      }
+    }
+
+    var maggio = document.querySelector('#msgbox');
+    function showmsg(txt) {
+      document.getElementById('msgbox').innerText = '✉ ' + txt;
+      maggio.classList.add('show');
+      setTimeout(function () {
+        maggio.classList.remove('show');
+      }, 3000);
+    }
+    document.onreadystatechange = () => {
+      if (document.readyState === 'complete') {
+        console.log('Flipped!');
+        toggle_light_mode({});
+      }
+    };
+
+  //Automaticaly update copyright year
+
+  function getCurrentYear() {
+    return new Date().getFullYear(); 
+  };
+  document.getElementById("currentYear").innerHTML = getCurrentYear();
+  </script>
 </html>
