--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
         <div id="searchnote">
             <input type="text" id="searching" placeholder="Search Note" value="" class="" />
           </div>
-        <!-- <button id="toggleDarkModeBtn" onclick="toggleDarkMode()">Dark mode</button> -->
-        <button 
+        <button
           class="light-mode-button"
           aria-label="Toggle Light Mode"
           onclick="toggle_light_mode()"
@@ -75,7 +74,7 @@
     
     <section id="footer">
       <span class="span">Created By <a href="https://github.com/Zack-Dx" target="_blank" style="color: #6d3c9b; text-decoration: none;"> Zack </a>| 
-      <span class="far fa-copyright"></span> 2022 All rights reserved.</span>
+      <span class="far fa-copyright" id="currentYear"></span>  All rights reserved.</span>
       <div class="social-icons">
         <a class="social" id="linkedin" href="#" target="_blank">
          <span class="icon"><i class="fab fa-linkedin"></i></span>
