--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/8c162ff673.js" crossorigin="anonymous"></script>
 
     <title>Todo List using Javascript</title>
   </head>
@@ -75,25 +76,27 @@
     <br /><br />
     <div id="mainbox">
   </div>
+
+
+
   <footer>
     
     <section id="footer">
       <span class="span">Created By <a href="https://github.com/Zack-Dx" target="_blank" style="color: #6d3c9b; text-decoration: none;"> Zack </a>| 
       <span class="far fa-copyright" id="currentYear"></span>  All rights reserved.</span>
       <div class="social-icons">
-        <a class="social" id="linkedin" href="#" target="_blank">
-         <span class="icon"><i class="fab fa-linkedin"></i></span>
-        </a>
-        <a class="social" id="insta" href="#" target="_blank">
-          <span class="icon"><i class="fab fa-instagram"></i></span>
-        </a>
-        <a class="social" id="github" href="https://github.com/Zack-Dx" target="_blank">
-         <span class="icon"><i class="fab fa-github-square"></i></span>
-        </a>
-        <a class="social" id="twitter" href="#" target="_blank">
-          <span class="icon"><i class="fab fa-twitter-square"></i></span>
-        </a>
-      </div>
+        
+<div class="flex-center">
+  <a class="social" id="github" href="#" target="_blank">
+  <i class="fa fa-twitter fa-2x icon-3d"></i></a>
+  <a class="social" id="github" href="#" target="_blank">
+  <i class="fa fa-facebook fa-2x icon-3d"></i></a>
+  <a class="social" id="github" href="#" target="_blank">
+  <i class="fa fa-instagram fa-2x icon-3d"></i></a>
+  <a class="social" id="github" href="https://github.com/Zack-Dx" target="_blank">
+  <i class="fa fa-github fa-2x icon-3d"></i></a>
+</div>
+  </div>
     </section>
     <div class="waves">
       <div class="wave" id="wave1"></div>
