--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       </div>
     </footer>
   </body>
-  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="index.js"></script>
-  <script src="messages.js"></script>
+  <script src="./js/sweetalert2/sweetalert2.all.min.js"></script>
+  <script src="./js/messages.js"></script>
+  <script src="./js/index.js"></script>
 </html>
