Added note sharing

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 
   </div>
   </body>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="index.js"></script>
   <script>
     function toggle_light_mode(firstLoad) {
