--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
       </div>
     </footer>
   </body>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="./js/sweetalert2/sweetalert2.all.min.js"></script>
   <script src="./js/messages.js"></script>
   <script src="./js/index.js"></script>
